# LSQuantumED

./: .gitignore  .travis.yml  LICENSE  README.md  docs_gen  estimateNEV.ipynb  main.cpp  main_NO_disorder.cpp  main_disorder.cpp  meson.build  meson_options.txt  processDSFdata.ipynb  simple_main.cpp  travis_runscript.sh
examples/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  main.cpp  main_NO_disorder.cpp  main_disorder.cpp  meson.build
include/: basis.hpp  environment.hpp  hamiltonian.hpp  hamiltonian.tmpl_func.hpp  lattice.hpp  meson.build  meson_config.h.in  phys.hpp  phys.tmpl_func.hpp  solver.hpp  sublattice.hpp
include/spinOperators/: correlation.hpp  meson.build  spinOPft.hpp  spinOPft.tmpl_func.hpp
include/tools/: meson.build  parse_args.hpp  parse_args.hpp.old  print_args.hpp  random_disorder.hpp  time_monitor.hpp
postprocessing/: dynamicStep0_preprocess.ipynb  dynamicStep1_convergence.ipynb  dynamicStep2_plotSw.ipynb  dynamicStep3_integratedQuantities.ipynb  meson.build  new_DSF.ipynb  processDSFdata.ipynb  static_analysis.ipynb
postprocessing/.ipynb_checkpoints/: dynamicStep0_preprocess-checkpoint.ipynb  dynamicStep1_convergence-checkpoint.ipynb  dynamicStep2_plotSw-checkpoint.ipynb  dynamicStep3_integratedQuantities-checkpoint.ipynb  dynamic_analysis-checkpoint.ipynb  new_DSF-checkpoint.ipynb  static_analysis-checkpoint.ipynb
src/: basis.cpp  environment.cpp  hamiltonian.cpp  lattice.cpp  meson.build  phys.cpp  solver.cpp  sublattice.cpp
src/spinOperators/: correlation.cpp  meson.build
src/tools/: meson.build  random_disorder.cpp  time_monitor.cpp
subprojects/packagecache/: tmp8b6melik
tests/: compare.sh
tests/unit_tests/: meson.build  test_binary_search.cpp  test_construct_hamilt.cpp
tests/unit_tests/basis/: meson.build  test_basis1.cpp  test_basis2.cpp  test_basis3.cpp  test_basis4.cpp
tests/unit_tests/build_diag/: meson.build
tests/unit_tests/build_diag/chain_1d/: meson.build  test_build_diag60.cpp  test_build_diag61.cpp  test_build_diag62.cpp  test_build_diag63.cpp  test_build_diag6m1.cpp  test_build_diag6m2.cpp  test_build_diag6m3.cpp
tests/unit_tests/build_diag/honeycomb_2d/: meson.build  test_build_diag125.cpp  test_build_diag82.cpp
tests/unit_tests/build_diag/square_2d/: meson.build  test_build_diag124.cpp  test_build_diag125.cpp  test_build_diag82.cpp
tests/unit_tests/build_disorder/: meson.build  test_build_disorder125.cpp  test_build_disorder60.cpp  test_build_disorder61.cpp  test_build_disorder62.cpp  test_build_disorder63.cpp  test_build_disorder6m1.cpp  test_build_disorder6m2.cpp  test_build_disorder6m3.cpp
tests/unit_tests/build_off_diag/: meson.build
tests/unit_tests/build_off_diag/chain_1d/: meson.build  test_build_off_diag60.cpp  test_build_off_diag61.cpp  test_build_off_diag62.cpp  test_build_off_diag63.cpp  test_build_off_diag6m1.cpp  test_build_off_diag6m2.cpp  test_build_off_diag6m3.cpp
tests/unit_tests/build_off_diag/honeycomb_2d/: meson.build  test_build_off_diag125.cpp  test_build_off_diag82.cpp
tests/unit_tests/build_off_diag/square_2d/: meson.build  test_build_off_diag125.cpp  test_build_off_diag82.cpp
tests/unit_tests/correlation/: meson.build
tests/unit_tests/correlation/SpSm/: #test_spsm1.cpp#  meson.build  test_spsm1.cpp
tests/unit_tests/correlation/SzSz/: meson.build  test_szsz1.cpp  test_szsz2.cpp
tests/unit_tests/environment/: meson.build  test_env1.cpp  test_env10.cpp  test_env11.cpp  test_env12.cpp  test_env2.cpp  test_env3.cpp  test_env4.cpp  test_env5.cpp  test_env6.cpp  test_env7.cpp  test_env8.cpp  test_env9.cpp
tests/unit_tests/get_coup_elems/: meson.build  test_get_coup_elems1.cpp  test_get_coup_elems2.cpp  test_get_coup_elems3.cpp  test_get_coup_elems4.cpp  test_get_coup_elems5.cpp
tests/unit_tests/get_disorder_elem/: meson.build  test_get_disorder_elem1.cpp  test_get_disorder_elem3.cpp
tests/unit_tests/get_elem_diag/: meson.build  test_get_elem_diag1.cpp  test_get_elem_diag2.cpp  test_get_elem_diag3.cpp  test_get_elem_diag4.cpp  test_get_elem_diag5.cpp
tests/unit_tests/lattice/: meson.build  test_lattice1.cpp  test_lattice10.cpp  test_lattice11.cpp  test_lattice2.cpp  test_lattice3.cpp  test_lattice4.cpp  test_lattice5.cpp  test_lattice6.cpp  test_lattice7.cpp  test_lattice8.cpp  test_lattice9.cpp
tests/unit_tests/phys/: meson.build  test_dsf1.cpp  test_dsf2.cpp
tests/unit_tests/prealloc_info/: meson.build  test_prealloc_info1.cpp  test_prealloc_info2.cpp  test_prealloc_info3.cpp
tests/unit_tests/reference_data/: bit_basis.ref  build_diag124.ref  build_diag125.ref  build_diag125h.ref  build_diag60.ref  build_diag61.ref  build_diag62.ref  build_diag6m1.ref  build_diag6m3.ref  build_diag82.ref  build_diag82h.ref  build_disorder125.ref  build_disorder60.ref  build_disorder61.ref  build_disorder62.ref  build_disorder63.ref  build_disorder6m1.ref  build_disorder6m2.ref  build_disorder6m3.ref  build_hamilt125.ref  build_hamilt60.ref  build_hamilt61.ref  build_hamilt63.ref  build_hamilt6m1.ref  build_hamilt6m2.ref  build_hamilt82.ref  build_off_diag125.ref  build_off_diag125h.ref  build_off_diag60.ref  build_off_diag61.ref  build_off_diag6m1.ref  build_off_diag6m2.ref  build_off_diag6m3.ref  build_off_diag82.ref  build_off_diag82h.ref  dsf_d0.ref  dsf_d0_1.ref  dsf_d0_2.ref  int_basis.ref
tests/unit_tests/solver/: meson.build  test_solver1.cpp  test_solver2.cpp  test_solver3.cpp  test_solver4.cpp  test_solver5.cpp  test_solver_init.cpp
tests/unit_tests/spinOPft/: meson.build  test_sqp1.cpp  test_sqz1.cpp
tests/unit_tests/spinOPft/Sqz/: meson.build  test_sqz1.cpp
tests/unit_tests/sublattice/: meson.build  test_sublattice1.cpp  test_sublattice2.cpp  test_sublattice3.cpp
tests/unit_tests/tools_random/: meson.build  test_tools_random1.cpp
