option('DEVEL', type: 'boolean', value: 'false', description: 'Compiles the "bit_basis".')
option('TIME_CODE', type: 'boolean', value: 'false', description: 'Activates the calls to the timing functions.')
option('DISORDER', type: 'boolean', value: 'false', description: 'Allows one to run the code with a disorder term in the Hamiltonian.')
